--- a/assets/scss/components/_cta-contact-row.scss
+++ b/assets/scss/components/_cta-contact-row.scss
@@ -9,6 +9,7 @@
 
   &__content {
     width: $content-width;
+    max-width: 100%;
     display: flex;
     align-items: center;
     margin: 0 auto;
